src/app/(main)/vision/coronavirus/coronavirus.css
/* ... */
.coronavirus-header-container h1 {
  color: #563c8d;
  font-size: 30px;
  line-height: 49px;
  text-shadow: 0px 0px 30px rgba(81, 67, 111, 0.2);
}
@media (min-width: 864px) {
  .coronavirus-header-container h1 {
    font-size: 48px;
    line-height: 78px;
  }
}
.coronavirus-header-container h2 {
  margin-bottom: 0;
  font-size: 25px;
  font-weight: 400;
}
@media (min-width: 864px) {
  .coronavirus-header-container h2 {
    font-size: 35px;
  }
}
.coronavirus-header-container p {
  margin-top: 0.5em;
}
.coronavirus-header-container h2,
.coronavirus-header-container p {
  color: #424242;
}

/* --- Corona comparison (SARS / MERS / COVID-19) --- */
.coronavirus .corona-comparison .corona {
  display: block;
  width: 100%;
}
@media (min-width: 420px) {
  .coronavirus .corona-comparison .corona {
    display: inline-block;
    width: 50%;
  }
}
@media (min-width: 590px) {
  .coronavirus .corona-comparison .corona {
    display: inline-block;
    width: 30%;
  }
}
.coronavirus .corona-comparison .corona .title {
  background: #424242;
  font-weight: 600;
  color: #fff;
  padding: 5px;
  margin: -5px 0 5px -5px;
  line-height: 2.5rem;
}
.coronavirus .corona-comparison .corona .title.covid19 {
  background: #563c8d;
}

/* --- Timeline --- */
.coronavirus .corona-timeline {
  border-left: #d6d2ea solid 3px;
}
.coronavirus .corona-timeline.timeline-dotted {
  display: block;
  height: 90px;
  border-left: #d6d2ea dotted 3px;
}
.coronavirus .corona-timeline .timepoint.time-highlight p {
  background: #d6d2ea;
  border-radius: 5px;
}
.coronavirus .corona-timeline .timepoint.time-highlight .dot {
  height: 24px;
  width: 24px;
  border-radius: 12px;
  box-shadow: inset 0px 0px 0px 3px white;
  border: 1px solid;
  margin: 8px 10px 0 -14px;
}
.coronavirus .corona-timeline .timepoint p {
  display: inline-block;
  margin-top: -2px;
  margin-bottom: 24px;
  padding: 10px;
  width: 90%;
}
.coronavirus .corona-timeline .timepoint .dot {
  display: inline-block;
  vertical-align: top;
  margin: 10px 10px 0 -12px;
  background: #563c8d;
  height: 20px;
  width: 20px;
  border-radius: 10px;
}
.coronavirus .corona-timeline .timepoint .dot.dotted {
  background: #fff;
  border: #563c8d dashed 1px;
}
.coronavirus .corona-timeline .timepoint ul {
  margin: 0 0 0 15px;
  list-style-type: disc;
}
.coronavirus .corona-timeline .timepoint ul li {
  margin: 0;
  padding: 0;
  display: list-item;
}

/* --- Close contact offset --- */
.coronavirus .close-contact {
}
@media (min-width: 864px) {
  .coronavirus .close-contact {
    margin-top: -250px;
    margin-left: 20vw;
  }
}
@media (min-width: 1035px) {
  .coronavirus .close-contact {
    margin-top: -300px;
    margin-left: calc(20vw - ((100vw - 1020px) / 2));
    margin-bottom: 50px;
  }
}

/* --- Stay calm box --- */
.coronavirus .stay-calm {
  background-color: #fbf9ff;
  transform: translate3d(0, 0, 0);
}
@media (min-width: 864px) {
  .coronavirus .stay-calm {
    max-width: 400px;
    margin-top: -400px;
  }
}

/* --- Prejudice / Masks sections --- */
.coronavirus-prejudice,
.coronavirus-masks {
  margin-bottom: 1em;
}
@media (min-width: 864px) {
  .coronavirus-prejudice,
  .coronavirus-masks {
    background-color: #fbf9ff;
  }
}

/* --- Mask halves --- */
.coronavirus .mask-half {
  display: inline-block;
  width: 50%;
  vertical-align: top;
}
.coronavirus .mask-half .pro-con p {
  display: inline-block;
  width: 75%;
}
.coronavirus .mask-half .pro-con .pro-con-icon {
  display: inline-block;
  height: 44px;
  width: 44px;
  margin-right: 20px;
}

/* --- Action Plan background --- */
.coronavirus-action-plan {
  position: relative;
  background-size: cover;
  background-repeat: no-repeat;
}
@media (max-width: 1023px) {
  .coronavirus-action-plan {
    background-position: 100vw 0;
  }
}
@media (min-width: 1024px) {
  .coronavirus-action-plan {
    min-height: 130vw;
  }
}

/* --- Around the world --- */
@media (min-width: 1024px) {
  .coronavirus-around-the-world {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
  }
  .coronavirus-around-the-world p {
    position: absolute;
    max-width: 400px;
    padding: 1em;
  }
  .coronavirus-around-the-world p:not(:first-of-type):not(:last-of-type) {
    background-color: rgba(255, 255, 255, 0.8);
  }
  .coronavirus-around-the-world p:first-of-type {
    bottom: 80%;
    left: calc(23vw - ((100vw - 1020px) / 2));
    max-width: 600px;
  }
  .coronavirus-around-the-world p:nth-of-type(2) {
    bottom: 55%;
    left: calc(60vw - ((100vw - 1020px) / 2));
  }
  .coronavirus-around-the-world p:nth-of-type(3) {
    bottom: 35%;
    left: calc(65vw - ((100vw - 1020px) / 2));
  }
  .coronavirus-around-the-world p:nth-of-type(4) {
    bottom: 20%;
    left: calc(58vw - ((100vw - 1020px) / 2));
  }
  .coronavirus-around-the-world p:nth-of-type(5) {
    bottom: 0;
    left: calc(23vw - ((100vw - 1020px) / 2));
    max-width: 750px;
  }
}

.coronavirus-around-the-world-mobile {
}
@media (min-width: 1024px) {
  .coronavirus-around-the-world-mobile {
    display: none;
  }
}

/* --- Action end --- */
.coronavirus-action-end {
  position: relative;
  height: 185vw;
}
.coronavirus-action-end .background-image {
  background-position: center bottom;
}
.coronavirus-action-end .content {
  position: absolute;
  top: 50px;
  left: 0;
  width: 100vw;
}
.coronavirus-action-end::after {
  position: absolute;
  top: 0;
  left: 0;
  display: none;
  content: '';
  width: 100vw;
  height: 80px;
  background: linear-gradient(
    180deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(255, 255, 255, 0) 100%
  );
}
@media (max-width: 863px) {
  .coronavirus-action-end::after {
    display: block;
  }
}
@media (max-width: 400px) {
  .coronavirus-action-end {
    height: 300vw;
  }
}
@media (min-width: 401px) {
  .coronavirus-action-end {
    height: 250vw;
  }
}
@media (min-width: 450px) {
  .coronavirus-action-end {
    height: 200vw;
  }
}
@media (min-width: 620px) {
  .coronavirus-action-end {
    height: 165vw;
  }
}
/* ... */

